test/corpus/function-refmod.txt
====================================
function result reference modification
====================================
       identification division.
       program-id. a.
       data division.
       working-storage section.
       01 WS-DATE PIC X(10).
       procedure division.
       0000-MAIN.
           MOVE FUNCTION CURRENT-DATE(1:4) TO WS-DATE(1:4).
---
